fixed header overflow in home page

--- a/src/Pages/home.css
+++ b/src/Pages/home.css
@@ -183,3 +183,9 @@ body {
     color: red;
     cursor: pointer;
 }
+
+@media only screen and (max-width: 600px) {
+    .header0 h2 {
+        font-size: 1.5em;
+    }
+}
